Fix scrollbar bug on homepage BY JOHNATHAN TY MODAFOKA

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,5 +1,5 @@
 footer{
-  .row{
+  .container {
     .col-md-10{
       border-top : 1px solid #D9D9D9;
       padding-top : 10px;
